@@ -1,3 +1,8 @@
+2012-08-23  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* eventsource.cc: Take option --out for assigning the output port
+	name.
+
 2012-08-13  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* VisualiseNeurons.cpp: Added #include <unistd.h>.
